# faze-2

./: CMakeLists.txt  ExtraSlut.cpp  ExtraSlut.hpp  ICU.cpp  ICU.hpp  bathroom.cpp  bathroom.hpp  block.cpp  block.hpp  game.cpp  game.hpp  hospitalMorgue.cpp  hospitalMorgue.hpp  main.cpp  operatingRoom.cpp  operatingRoom.hpp  patient.cpp  patient.hpp  patientInf.hpp  reception.cpp  reception.hpp  restSlut.cpp  restSlut.hpp  room.cpp  room.hpp
